--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,2 +1,53 @@
+.hero {
+	overflow-x: hidden;
+}
+
 .container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	padding: 1rem 3rem;
+}
+
+.wrapper {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 2rem;
+}
+
+.wrapper h1 {
+	font-size: 2.5rem;
+	font-weight: 700;
+}
+
+.wrapper p {
+	font-size: 1.2rem;
+	text-align: center;
+	max-width: 300px;
+	line-height: 1.8rem;
+}
+
+.image_wrapper {
+	width: 250px;
+	height: 250px;
+	border-radius: 20% 0 20% 0;
+	border: 3px solid #000;
+	padding: 0.2rem;
+	transition: all 0.3s ease-in-out;
+}
+
+.image_wrapper img {
+	width: 100%;
+	height: 100%;
+	border-radius: 20% 0 20% 0;
+	object-fit: cover;
+	transition: all 0.3s ease-in-out;
+}
+
+.image_wrapper:hover,
+.image_wrapper:hover img {
+	border-radius: 0 20% 0 20%;
 }
