--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,11 @@
+@import url(https://fonts.googleapis.com/css?family=Fira+Code:300,regular,500,600,700);
+
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
 	scroll-behavior: smooth;
+	font-family: "Fire Code", monospace;
 }
 
 section {
