--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 
 section {
 	width: 100%;
-	height: 100vh;
+	min-height: 100vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -26,4 +26,21 @@ a {
 
 ::-webkit-scrollbar {
 	display: none;
+}
+
+.section_divider {
+	margin: 0 auto;
+	width: 50%;
+	height: 6px;
+	background: rgb(2, 0, 36);
+	background: linear-gradient(
+		90deg,
+		rgba(2, 0, 36, 1) 3%,
+		rgba(65, 9, 121, 1) 31%,
+		rgba(63, 14, 124, 1) 67%,
+		rgba(0, 212, 255, 1) 91%
+	);
+	z-index: 0;
+	transform: skewY(0deg);
+	transform-origin: top right;
 }
