--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -34,3 +34,11 @@
 .image_grid img:hover {
 	transform: scale(1.1);
 }
+
+.text {
+	font-size: 1.1rem;
+	font-weight: 500;
+	text-align: justify;
+	line-height: 1.5;
+	max-width: 800px;
+}
