--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -47,6 +47,13 @@
 	white-space: nowrap;
 }
 
+@media (max-width: 500px) {
+	.info h1 {
+		white-space: pre-wrap;
+		text-align: center;
+	}
+}
+
 .info p {
 	text-align: justify;
 	line-height: 1.5rem;
