--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@
 	font-family: "Fire Code", monospace;
 }
 
+body {
+	overflow-x: hidden;
+}
+
 section {
 	width: 100%;
 	min-height: 100vh;
@@ -46,4 +50,3 @@ a {
 }
 
 /* Swiper styles */
-
