--- a/src/components/Layout/Navbar/Navbar.module.css
+++ b/src/components/Layout/Navbar/Navbar.module.css
@@ -20,6 +20,7 @@
 .left {
 	display: flex;
 	align-items: center;
+	width: fit-content;
 }
 
 .left a svg {
@@ -33,11 +34,10 @@
 	}
 }
 
-
 .right {
 	display: flex;
 	align-items: center;
-	gap: 3rem;
+	gap: 1rem;
 }
 
 .right ul {
