--- a/src/components/Layout/Footer/Footer.module.css
+++ b/src/components/Layout/Footer/Footer.module.css
@@ -4,6 +4,7 @@
 	border-radius: 0px;
 	background: #e0e0e0;
 	box-shadow: inset 7px 7px 9px #b8b8b8, inset -7px -7px 9px #ffffff;
+	overflow: hidden;
 }
 
 /* copyright*/
@@ -20,6 +21,12 @@
 	justify-content: space-between;
 	align-items: center;
 	padding: 1rem 3rem;
+
+	@media (max-width: 768px) {
+		flex-direction: column;
+		align-items: center;
+		gap: 1rem;
+	}
 }
 
 .left {
