--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -1,67 +1,102 @@
 .projects {
-	overflow: hidden;
+  overflow: hidden;
 }
 
 .section_header {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	gap: 3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 3rem;
 }
 
 .container {
-	display: flex;
-	justify-content: center;
-	flex-wrap: wrap-reverse;
-	align-items: center;
-	gap: 2rem;
-	min-height: 500px;
-	margin: 1rem 3rem;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap-reverse;
+  align-items: center;
+  gap: 2rem;
+  min-height: 500px;
+  margin: 1rem 3rem;
 }
 
 .image_container {
-	max-width: 300px;
-	max-height: 300px;
-	padding: 2rem;
-	margin-bottom: 3rem;
+  max-width: 300px;
+  max-height: 300px;
+  padding: 2rem;
+  margin-bottom: 3rem;
 }
 
 .image_container img {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .info {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	max-width: 400px;
-	gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 400px;
+  gap: 1rem;
 }
 
 .info h1 {
-	font-size: 1.7rem;
-	font-weight: 600;
-	white-space: nowrap;
+  font-size: 1.7rem;
+  font-weight: 600;
+  white-space: nowrap;
 }
 
 @media (max-width: 500px) {
-	.info h1 {
-		white-space: pre-wrap;
-		text-align: center;
-	}
+  .info h1 {
+    white-space: pre-wrap;
+    text-align: center;
+  }
 }
 
 .info p {
-	text-align: justify;
-	line-height: 1.5rem;
+  text-align: justify;
+  line-height: 1.5rem;
+}
+
+.web_links a {
+  align-items: center;
+  background-color: #0a66c2;
+  border: 0;
+  border-radius: 100px;
+  color: #ffffff;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: -apple-system, system-ui, system-ui, "Segoe UI", Roboto,
+    "Helvetica Neue", "Fira Sans", Ubuntu, Oxygen, "Oxygen Sans", Cantarell,
+    "Droid Sans", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
+    "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  justify-content: center;
+  line-height: 20px;
+  max-width: 480px;
+  min-height: 40px;
+  min-width: 0px;
+  overflow: hidden;
+  padding: 0px;
+  padding-left: 20px;
+  padding-right: 20px;
+  text-align: center;
+  touch-action: manipulation;
+  user-select: none;
+  -webkit-user-select: none;
+  vertical-align: middle;
+}
+
+.web_links a:hover .web_links a:focus {
+  background-color: #ffffff;
+  color: #16437e;
 }
 
 .icons {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	gap: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
 }
