--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -1,44 +1,44 @@
 .about {
-	overflow: hidden;
+  overflow: hidden;
 }
 
 .container {
-	padding: 1rem 3rem;
+  padding: 1rem 3rem;
 }
 
 .wrapper {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	gap: 2rem;
-	max-width: 1000px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+  max-width: 1000px;
 }
 
 .image_grid {
-	display: grid;
-	direction: rtl;
-	grid-template-columns: repeat(3, 1fr);
-	grid-gap: 1rem;
+  display: grid;
+  direction: ltr;
+  grid-template-columns: repeat(1, 1fr);
+  grid-gap: 1rem;
 }
 
 .image_grid img {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-	border: 3px solid #000;
-	border-radius: 20% 0 20% 0;
-	transition: all 0.3s ease-in-out;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  border: 3px solid #000;
+  border-radius: 20% 0 20% 0;
+  transition: all 0.3s ease-in-out;
 }
 
 .image_grid img:hover {
-	transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 .text {
-	font-size: 1.1rem;
-	font-weight: 500;
-	text-align: justify;
-	line-height: 1.5;
-	max-width: 800px;
+  font-size: 1.1rem;
+  font-weight: 500;
+  text-align: justify;
+  line-height: 1.5;
+  max-width: 800px;
 }
